force-app/main/default/objects/Brand_Hierarchy__c/Brand_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Brand Hierarchy</label>
    <nameField>
        <displayFormat>BH{0000}</displayFormat>
        <label>Brand Hierarchy Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>