force-app/main/default/objects/Brand_Hierarchy__c/fields/Archival_Date__c.field-meta.xml
<CustomField>
    <fullName>Archival_Date__c</fullName>
    <description>For feed only.</description>
    <formula>&quot;&quot;</formula>
    <label>Archival Date</label>
    <type>Text</type>
</CustomField>