force-app/main/default/objects/Brand_Hierarchy__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Brand Hierarchies</relationshipLabel>
    <relationshipName>Brand_Hierarchies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>