force-app/main/default/objects/Brand_Hierarchy__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <formula>Brand_Code__r.Name</formula>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>