force-app/main/default/objects/Brand_Hierarchy__c/fields/Brand_Status__c.field-meta.xml
<CustomField>
    <fullName>Brand_Status__c</fullName>
    <description>It is only for Brand_Hierarchy_Outbound feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>