force-app/main/default/objects/Brand_Hierarchy__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>it is only for Brand_Hierarchy_Outbound feed.</description>
    <formula>Brand_Code__r.BrandCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>