force-app/main/default/objects/Brand_Hierarchy__c/fields/CodeCategory__c.field-meta.xml
<CustomField>
    <fullName>CodeCategory__c</fullName>
    <description>it is only for Brand_Hierarchy_Outbound feed.</description>
    <formula>&apos;CRCBRANDHIERARCHY&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CodeCategory</label>
    <type>Text</type>
</CustomField>