force-app/main/default/objects/Brand_Hierarchy__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <description>it is only for Brand_Hierarchy_Outbound feed.</description>
    <formula>&apos;BRANDHIERARCHY&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Type</label>
    <type>Text</type>
</CustomField>