force-app/main/default/objects/Brand_Hierarchy__c/fields/Duplicate_Brnad_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Brnad_Hierarchy__c</fullName>
    <formula>trim(Product_Line_Code__r.Name) +   trim(Brand_Code__r.BrandCode__c) + trim(UPC__c) + trim(text(Taste__c))+ trim(text(Length__c)) + trim(text(Packaging__c)) + trim(text(Flavor__c)) + trim(text(Filter__c)) + trim(text(PaperType__c)) + trim(text(Cut__c))</formula>
    <label>Duplicate Brand Hierarchy</label>
    <type>Text</type>
</CustomField>