force-app/main/default/objects/Brand_Hierarchy__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>2A - PI Approved</fullName>
            </value>
            <value>
                <fullName>500mA</fullName>
            </value>
            <value>
                <fullName>500mA - EU</fullName>
            </value>
            <value>
                <fullName>500mA - NZ</fullName>
            </value>
            <value>
                <fullName>500mA - UK</fullName>
            </value>
            <value>
                <fullName>CVR 2.4</fullName>
            </value>
            <value>
                <fullName>CVR2.6.8G</fullName>
            </value>
            <value>
                <fullName>CVR2.6.8G &amp; BVR2.4L</fullName>
            </value>
            <value>
                <fullName>Filter</fullName>
            </value>
            <value>
                <fullName>Filtered</fullName>
            </value>
            <value>
                <fullName>Flavormax</fullName>
            </value>
            <value>
                <fullName>GSAW-001</fullName>
            </value>
            <value>
                <fullName>LED Green</fullName>
            </value>
            <value>
                <fullName>LED Green - UK</fullName>
            </value>
            <value>
                <fullName>LED Red</fullName>
            </value>
            <value>
                <fullName>LED Red - UK</fullName>
            </value>
            <value>
                <fullName>Multifilter</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Non-Filtered</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>PI Approved</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>US to EU</fullName>
            </value>
            <value>
                <fullName>Vapors</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>