force-app/main/default/objects/Brand_Hierarchy__c/fields/Flavor__c.field-meta.xml
<CustomField>
    <fullName>Flavor__c</fullName>
    <label>Flavor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-PACK</fullName>
            </value>
            <value>
                <fullName>2 - PACK FOIL $1.75</fullName>
            </value>
            <value>
                <fullName>3-PACK</fullName>
            </value>
            <value>
                <fullName>3 - PACK FOIL</fullName>
            </value>
            <value>
                <fullName>5 - PACK $3.95 - H</fullName>
            </value>
            <value>
                <fullName>5 - PACK $3.95 - N</fullName>
            </value>
            <value>
                <fullName>5 - PACK CREAM FILLER</fullName>
            </value>
            <value>
                <fullName>5 - PACK H</fullName>
            </value>
            <value>
                <fullName>5 - PACK - H</fullName>
            </value>
            <value>
                <fullName>5 - PACK N</fullName>
            </value>
            <value>
                <fullName>5 - PACK - N</fullName>
            </value>
            <value>
                <fullName>5 - PACK SWEETS FILLER</fullName>
            </value>
            <value>
                <fullName>5 - PACK - T</fullName>
            </value>
            <value>
                <fullName>Absolute Tobacco</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>APPLE CIDER</fullName>
            </value>
            <value>
                <fullName>Berry</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blend No. 27</fullName>
            </value>
            <value>
                <fullName>Blue Mint</fullName>
            </value>
            <value>
                <fullName>BOLD CLASSIC 4.0</fullName>
            </value>
            <value>
                <fullName>Bold Classic 4.5</fullName>
            </value>
            <value>
                <fullName>BOLD MENTHOL 4.0</fullName>
            </value>
            <value>
                <fullName>Bold Menthol 4.5</fullName>
            </value>
            <value>
                <fullName>Bold Original 4.5</fullName>
            </value>
            <value>
                <fullName>Bold Wintergreen</fullName>
            </value>
            <value>
                <fullName>BOURBON BLEND 1.2</fullName>
            </value>
            <value>
                <fullName>BOURBON BLEND 2.5</fullName>
            </value>
            <value>
                <fullName>BVR 2.4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>