force-app/main/default/objects/Brand_Hierarchy__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100s</fullName>
            </value>
            <value>
                <fullName>120s</fullName>
            </value>
            <value>
                <fullName>72mm</fullName>
            </value>
            <value>
                <fullName>83mm</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Cube</fullName>
            </value>
            <value>
                <fullName>Disposable</fullName>
            </value>
            <value>
                <fullName>Flat Wire</fullName>
            </value>
            <value>
                <fullName>King Size</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Long Size</fullName>
            </value>
            <value>
                <fullName>Mini</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>Other Size</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Plug Adapter</fullName>
            </value>
            <value>
                <fullName>QUEEN SIZE</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Stainless Steel</fullName>
            </value>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>TANK</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>USB Charger</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XL LONG</fullName>
            </value>
            <value>
                <fullName>100s Red</fullName>
                <isActive>false</isActive>
                <label>100s Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>