force-app/main/default/objects/Brand_Hierarchy__c/fields/License_Group__c.field-meta.xml
<CustomField>
    <fullName>License_Group__c</fullName>
    <description>It is only for Brand_Hierarchy_Outbound feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>License Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>