force-app/main/default/objects/Brand_Hierarchy__c/fields/Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>Pack_Type__c</fullName>
    <description>It is only for Brand_Hierarchy_Outbound feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pack Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>