force-app/main/default/objects/Brand_Hierarchy__c/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <label>Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10-2-Pack Upright Promo 201002</fullName>
            </value>
            <value>
                <fullName>10 Ct Display Of 7 - Pack</fullName>
            </value>
            <value>
                <fullName>10 Ct  Tray-5-Pack</fullName>
            </value>
            <value>
                <fullName>10ct Tray-5-Packpromo201001</fullName>
            </value>
            <value>
                <fullName>10 Ct Tray-5-Packpromo201001</fullName>
            </value>
            <value>
                <fullName>10 Ct Tray Of 7 - Pack</fullName>
            </value>
            <value>
                <fullName>10 - Pack</fullName>
            </value>
            <value>
                <fullName>1 1/2 Oz Packet</fullName>
            </value>
            <value>
                <fullName>12 Oz Can</fullName>
            </value>
            <value>
                <fullName>1 3/8 Oz Packet</fullName>
            </value>
            <value>
                <fullName>14 Oz Can</fullName>
            </value>
            <value>
                <fullName>1-PACK</fullName>
            </value>
            <value>
                <fullName>25 -Count Upright</fullName>
            </value>
            <value>
                <fullName>25 -COUNT UPRIGHT $0.79</fullName>
            </value>
            <value>
                <fullName>25 -COUNT UPRIGHT $0.89</fullName>
            </value>
            <value>
                <fullName>25 -COUNT UPRIGHT $0.99</fullName>
            </value>
            <value>
                <fullName>25 -Count Upright Singles</fullName>
            </value>
            <value>
                <fullName>25 -Ct  Upright</fullName>
            </value>
            <value>
                <fullName>25s Hard Pack</fullName>
            </value>
            <value>
                <fullName>2 Pack</fullName>
            </value>
            <value>
                <fullName>2 Pack 1.49</fullName>
            </value>
            <value>
                <fullName>2 - Pack Foil</fullName>
            </value>
            <value>
                <fullName>2 - Pack Foil- $0.99</fullName>
            </value>
            <value>
                <fullName>2 - Pack Foil- $1.39</fullName>
            </value>
            <value>
                <fullName>2 - PACK FOIL $1.75</fullName>
            </value>
            <value>
                <fullName>2 - Pack Foil B2G $0.50 OFF</fullName>
            </value>
            <value>
                <fullName>2 - Pack Foil CGR</fullName>
            </value>
            <value>
                <fullName>2 - Pack Foil Promo $1.49</fullName>
            </value>
            <value>
                <fullName>2 - Pack Foil Promo $2.29</fullName>
            </value>
            <value>
                <fullName>2 - Pack Foil Promo 1.49</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>