force-app/main/default/objects/Brand_Hierarchy__c/fields/PaperType__c.field-meta.xml
<CustomField>
    <fullName>PaperType__c</fullName>
    <label>PaperType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banded Paper</fullName>
            </value>
            <value>
                <fullName>Banded Paper Ny</fullName>
            </value>
            <value>
                <fullName>BLUE</fullName>
            </value>
            <value>
                <fullName>BRILLIANT COPPER</fullName>
            </value>
            <value>
                <fullName>COPPER</fullName>
            </value>
            <value>
                <fullName>DEEP LAVENDER</fullName>
            </value>
            <value>
                <fullName>Designer Battery Long Green LED - Green</fullName>
            </value>
            <value>
                <fullName>Designer Battery Long Green LED - I Love Green Smoke  Springfield</fullName>
            </value>
            <value>
                <fullName>Designer Battery Long Green LED - Mocha Mist Mocha</fullName>
            </value>
            <value>
                <fullName>Designer Battery Long Green LED - Mocha Mist  Seattle</fullName>
            </value>
            <value>
                <fullName>Designer Battery Long Green LED - Smooth Chocolate  Manhattan</fullName>
            </value>
            <value>
                <fullName>Designer Battery Long Green LED - Smooth Cream Cream</fullName>
            </value>
            <value>
                <fullName>Designer Battery Long Green LED - Vanilla Dreams  Charleston</fullName>
            </value>
            <value>
                <fullName>Designer - Black</fullName>
            </value>
            <value>
                <fullName>Designer - Black  Nashville</fullName>
            </value>
            <value>
                <fullName>Designer - Brown</fullName>
            </value>
            <value>
                <fullName>Designer - Classic Tobacco Classic</fullName>
            </value>
            <value>
                <fullName>Designer - I Love Green Smoke  Springfield</fullName>
            </value>
            <value>
                <fullName>Designer - Menthol Ice Jazzy</fullName>
            </value>
            <value>
                <fullName>Designer - Menthol Ice  New Orleans</fullName>
            </value>
            <value>
                <fullName>Designer - Mocha Mist  Seattle</fullName>
            </value>
            <value>
                <fullName>Designer - Red Label  El Paso</fullName>
            </value>
            <value>
                <fullName>Designer - Signature Red Paisley</fullName>
            </value>
            <value>
                <fullName>Designer  - Smooth Chocolate  Manhattan</fullName>
            </value>
            <value>
                <fullName>Designer - Southern Gold Argyle</fullName>
            </value>
            <value>
                <fullName>Designer - Tobacco Gold  Chicago</fullName>
            </value>
            <value>
                <fullName>Designer - Vanilla Dreams  Charleston</fullName>
            </value>
            <value>
                <fullName>FOREST GREEN</fullName>
            </value>
            <value>
                <fullName>FSC</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>