force-app/main/default/objects/Brand_Hierarchy__c/fields/Pick_Up_Policy_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Policy_Weeks__c</fullName>
    <label>Pick Up Policy Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>