force-app/main/default/objects/Brand_Hierarchy__c/fields/Pm_Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Pm_Brand_Code__c</fullName>
    <description>It is only for Brand_Hierarchy_Outbound feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pm Brand Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>