force-app/main/default/objects/Brand_Hierarchy__c/fields/Price_Category__c.field-meta.xml
<CustomField>
    <fullName>Price_Category__c</fullName>
    <description>It is only for Brand_Hierarchy_Outbound feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Price Category</label>
    <type>TextArea</type>
</CustomField>