force-app/main/default/objects/Brand_Hierarchy__c/fields/PriceCategoryFeed__c.field-meta.xml
<CustomField>
    <fullName>PriceCategoryFeed__c</fullName>
    <description>Outbound Feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Price Category Feed</label>
    <type>TextArea</type>
</CustomField>