force-app/main/default/objects/Brand_Hierarchy__c/fields/Product_Desc__c.field-meta.xml
<CustomField>
    <fullName>Product_Desc__c</fullName>
    <description>It is only for Brand_Hierarchy_Outbound feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Desc</label>
    <type>TextArea</type>
</CustomField>