force-app/main/default/objects/Brand_Hierarchy__c/fields/Product_Line_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Brand Hierarchies</relationshipLabel>
    <relationshipName>Brand_Hierarchies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>