force-app/main/default/objects/Brand_Hierarchy__c/fields/ProductDescFeed__c.field-meta.xml
<CustomField>
    <fullName>ProductDescFeed__c</fullName>
    <description>Outbound Feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Desc Feed</label>
    <type>TextArea</type>
</CustomField>