force-app/main/default/objects/Brand_Hierarchy__c/fields/ProductLine_Code__c.field-meta.xml
<CustomField>
    <fullName>ProductLine_Code__c</fullName>
    <description>it is only for Brand_Hierarchy_Outbound feed.</description>
    <formula>Product_Line_Code__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Code</label>
    <type>Text</type>
</CustomField>