force-app/main/default/objects/Brand_Hierarchy__c/fields/ProductTypeFeed__c.field-meta.xml
<CustomField>
    <fullName>ProductTypeFeed__c</fullName>
    <description>Outbound Feed only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Type Feed</label>
    <type>TextArea</type>
</CustomField>