force-app/main/default/objects/Brand_Hierarchy__c/fields/Reporting_Brand_Family__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Brand_Family__c</fullName>
    <description>It is only for Brand_Hierarchy_Outbound feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reporting Brand Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>