force-app/main/default/objects/Brand_Hierarchy__c/fields/Short_Cut__c.field-meta.xml
<CustomField>
    <fullName>Short_Cut__c</fullName>
    <description>It is only for Brand_Hierarchy_Outbound feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Cut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>