force-app/main/default/objects/Brand_Hierarchy__c/fields/String_Data__c.field-meta.xml
<CustomField>
    <fullName>String_Data__c</fullName>
    <description>For feed only.</description>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>String Data</label>
    <type>Text</type>
</CustomField>