force-app/main/default/objects/Brand_Hierarchy__c/fields/Taste__c.field-meta.xml
<CustomField>
    <fullName>Taste__c</fullName>
    <label>Taste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>0.006</fullName>
            </value>
            <value>
                <fullName>0.012</fullName>
            </value>
            <value>
                <fullName>0.018</fullName>
            </value>
            <value>
                <fullName>0.024</fullName>
            </value>
            <value>
                <fullName>1 MG</fullName>
            </value>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>2 MG</fullName>
            </value>
            <value>
                <fullName>3 MG</fullName>
            </value>
            <value>
                <fullName>4 MG</fullName>
            </value>
            <value>
                <fullName>4-Port</fullName>
            </value>
            <value>
                <fullName>500mA</fullName>
            </value>
            <value>
                <fullName>8 MG</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>BLACK &amp; GOLD</fullName>
            </value>
            <value>
                <fullName>BLACK LABEL</fullName>
            </value>
            <value>
                <fullName>BLACK PACK</fullName>
            </value>
            <value>
                <fullName>BLACK SELECT</fullName>
            </value>
            <value>
                <fullName>Black Special Blend</fullName>
            </value>
            <value>
                <fullName>Blend No. 27</fullName>
            </value>
            <value>
                <fullName>Blend No. 32</fullName>
            </value>
            <value>
                <fullName>Blend No. 54</fullName>
            </value>
            <value>
                <fullName>BLUE</fullName>
            </value>
            <value>
                <fullName>Blue Pack</fullName>
            </value>
            <value>
                <fullName>Bold</fullName>
            </value>
            <value>
                <fullName>BOLD ICE</fullName>
            </value>
            <value>
                <fullName>Bronze Pack</fullName>
            </value>
            <value>
                <fullName>Bronze Pack Blend No. 27</fullName>
            </value>
            <value>
                <fullName>Chewable Dissolvables</fullName>
            </value>
            <value>
                <fullName>Chews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>