force-app/main/default/objects/Brand_Hierarchy__c/fields/Units_Per_Pack__c.field-meta.xml
<CustomField>
    <fullName>Units_Per_Pack__c</fullName>
    <label>Units Per Pack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>