force-app/main/default/objects/Brand_Hierarchy__c/fields/UPC__c.field-meta.xml
<CustomField>
    <fullName>UPC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UPC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>