force-app/main/default/objects/Brand_Hierarchy__c/fields/Ust_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Ust_Date_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ust Date Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>