force-app/main/default/objects/Brand_Hierarchy__c/fields/Vantive_Id__c.field-meta.xml
<CustomField>
    <fullName>Vantive_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vantive Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>