force-app/main/default/objects/Brand_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Vantive_Id__c</columns>
    <columns>Product_Line_Code__c</columns>
    <columns>Brand_Code__c</columns>
    <columns>Cut__c</columns>
    <columns>Filter__c</columns>
    <columns>Taste__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Flavor__c</columns>
    <columns>UPC__c</columns>
    <columns>Packaging__c</columns>
    <columns>PaperType__c</columns>
    <columns>Length__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>BH4811</value>
    </filters>
    <label>All</label>
</ListView>